--- a/src/content/styles.css
+++ b/src/content/styles.css
@@ -71,10 +71,6 @@
     height: 1rem;
 }
 
-i {
-    margin-right: 5px;
-}
-
 .fas {
     color: white;
 }
@@ -103,4 +99,5 @@ i {
     border-radius: 1rem;
     z-index: 10000 !important;
     transition: all 0.5s ease;
+    padding: 1rem;
 }
